small changes about re-subscription after loading new url in the widget

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,7 @@
     The alert window is binded to the getVolume function
   </div>
   <div *ngIf="bindedEvent" style="color:red">
-    The alert window is binded to the pause event (don't forget to subscribe to pause event)
+    The alert window is binded to the pause event (don't forget to subscribe to pause event and to re-subscribe each time you load a new url in the widget)
   </div>
   <table>
     <tr >
